--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -3,6 +3,18 @@
 
 
 
+@Article{Willis2019,
+  author =	 {Amy D. Willis},
+  title =	 {Rarefaction, Alpha Diversity, and Statistics},
+  journal =	 {Frontiers in Microbiology},
+  year =	 {2019},
+  volume =	 10,
+  doi =		 {10.3389/fmicb.2019.02407}
+}
+
+
+
+
 
 @Book{Aitchison1986,
   author =	 {Aitchison, J},
