--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -192,7 +192,7 @@ chapter [@sec-faith-diversity]. In addition, box plots that group
 samples according to certain information, such as origin, sex, age and
 health condition, can be labeled with p-values for significant
 differences with the package _ggsignif_ package, as shown in chapter
-[@sec-estimate-diversity].
+[@sec-community-diversity].
 
 ### Beta diversity with Shepard and coordination plots
 
