Add: option to supress rgl separate windows to fix Quarto failing to start

--- a/inst/pages/97_extra_materials.qmd
+++ b/inst/pages/97_extra_materials.qmd
@@ -237,6 +237,7 @@ plot(posterior, par="Lambda", focus.cov = rownames(X)[c(2,4)])
 
 ```{r, message=FALSE, warning=FALSE}
 # Load libraries
+options(rgl.useNULL = TRUE) # Suppress the separate window
 library(rgl)
 library(plotly)
 ```
