qiime2R listed in OMA

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -345,6 +345,7 @@ resources. The output has to be converted into TreeSE/MAE separately.
 
 - [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
 - [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
+- [qiime2R](https://github.com/microbiome/qiime2R) provides access to [QIIME2](https://docs.qiime2.org/2024.2/) 
 
 ## Loading experimental microbiome data {#sec-loading-experimental-microbiome-data}
 
