--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -416,7 +416,7 @@ tse_genus <- addPerSampleDominantFeatures(tse_genus,
                                           assay.type = "relabundance",
                                           name = "dominant_taxa")
 # Overview
-countDominantFeatures(tse_genus, rank = "Genus", digits = 3, name = "dominant_taxa")
+summarizeDominance(tse_genus, rank = "Genus", digits = 3, name = "dominant_taxa")
 ```
 
 Next, we perform PCoA with Bray-Curtis dissimilarity.
