replace getPrevalence and getPrevalentAbundance with addPrevalence and addPrevalentAbundance

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -398,7 +398,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, addPerCellQ
 3. Report the thresholds and the dimensionality of the data before and after subsetting  
 4. Visualize prevalence  
 
-Useful functions: getPrevalence, getPrevalentFeatures, subsetByPrevalentFeatures
+Useful functions: addPrevalence, getPrevalentFeatures, subsetByPrevalentFeatures
 
 
 ### Data exploration
