--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -64,8 +64,8 @@ Let us load example data and rename it as tse.
 
 ```{r}
 library(mia)
-data("hitchip1006", package = "miaTime")
-tse <- hitchip1006
+data("GlobalPatterns", package = "mia")
+tse <- GlobalPatterns
 ```
 
 The `assays` slot contains the experimental data as multiple count matrices. The result of `assays` is a list of matrices.
