update oma packages list

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -176,7 +176,7 @@ Well done! You can now use an advanced feature of Quarto such as parameters.
 If you got stuck, [here](https://quarto.org/docs/computations/parameters.html#knitr)
 you can find more information about parameter definition and usage.
 
-              <!-- section 18.3 starts here# -->
+              <!-- #############section 18.3 starts here###### -->
 
 ## Data containers: TreeSE
 
