correct explanation for mergeSEs

--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -340,7 +340,8 @@ head(tse$NewVariable)
 objects. For example, it is possible to combine multiple `TreeSE` objects which each
 includes one sample. 
 
-`mergeSEs` works like `dplyr` joining functions. 
+`mergeSEs` works much like standard joining operations. It combines rows and 
+columns and allows you to specify the merging method.
 
 ```{r merge1}
 # Take subsets for demonstration purposes
