--- a/inst/pages/95_resources.qmd
+++ b/inst/pages/95_resources.qmd
@@ -92,7 +92,7 @@ material can be used to familiarize with such alternative methods:
  * phyloseq [@McMurdie2013]  
  * [microbiome tutorial](http://microbiome.github.io/tutorials/)  
  * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)
- * [phyloseq/TreeSE cheatsheet](https://microbiome.github.io/OMA/docs/devel/pages/97_extra_materials.html)
+ * [phyloseq/TreeSE cheatsheet](https://microbiome.github.io/OMA/docs/devel/pages/97_extra_materials.html#phyloseq-vs-treese-cheatsheet)
  * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses [@Callahan2016].
  
 
