Add: Legendre2001 citation

--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -2139,3 +2139,14 @@ year = {2014}
     url = {https://doi.org/10.1038/s41587-023-01872-y},
     year = {2023}
 }
+
+@article{Legendre2001,
+  author = {Legendre, Pierre and Gallagher, Eugene D.},
+  title = {Ecologically Meaningful Transformations for Ordination of Species Data},
+  journal = {Oecologia},
+  month = oct,
+  volume = {129},
+  number = {2},
+  pages = {271--280},
+  url = {https://doi.org/10.1007/s004420100716},
+  year = {2001}
