--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -75,7 +75,7 @@ Visualize as heatmap.
 
 ```{r heatmapvisu}
 # Melt the assay for plotting purposes
-df <- meltAssay(tse_phylum, assay.type = "clr_z")
+df <- meltSE(tse_phylum, assay.type = "clr_z")
 
 # Determines the scaling of colours
 maxval <- round(max(abs(df$clr_z)))
