--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -412,7 +412,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Other functions
 
 1. Merge data objects (merge, mergeSEs)  
-2. Melt the data for visualization purposes (meltAssay)  
+2. Melt the data for visualization purposes (meltSE)  
 
 
 ### Assay transformation
