--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -11,14 +11,14 @@ chapterPreamble()
 
 For several custom analysis and visualization packages, such as those from
 `tidyverse`, the `SE` data can be converted to a long data.frame format with 
-`meltAssay`.    
+`meltSE`.    
 
 ```{r}
 library(mia)
 data(GlobalPatterns, package="mia")
 tse <- GlobalPatterns
 tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
-molten_tse <- mia::meltAssay(tse,
+molten_tse <- mia::meltSE(tse,
                         add_row_data = TRUE,
                         add_col_data = TRUE,
                         assay.type = "relabundance")
