Change: switch to DOI from URL

--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -2148,5 +2148,5 @@ year = {2014}
   volume = {129},
   number = {2},
   pages = {271--280},
-  url = {https://doi.org/10.1007/s004420100716},
+  doi = {10.1007/s004420100716},
   year = {2001}
