--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -188,7 +188,7 @@ plotColData(tse,
             "SampleType", 
             colour_by = "Final_Barcode") +
     theme(axis.text.x = element_text(angle=45,hjust=1)) + 
-  ylab(expression(Richness[Observed]))
+  labs(expression(Richness[Observed]))
 
 ```
 
