--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -301,7 +301,7 @@ plotColData(tse,"sum","SampleType", colour_by = "SampleType") +
 ```
 
 In addition, data can be rarefied with
-[rarefyAssay](https://microbiome.github.io/mia/reference/rarefyAssay.html),
+[subsampleCounts](https://microbiome.github.io/mia/reference/subsampleCounts.html),
 which normalises the samples to an equal number of reads. However,
 this practice has been discouraged for the analysis of differentially
 abundant microorganisms (see [@mcmurdie2014waste]).
