--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -387,7 +387,7 @@ However, such data are not always included.
 ### Library sizes
 
 1. Calculate library sizes  
-2. Subsample / rarify the counts (see: subsampleCounts)  
+2. Subsample / rarify the counts (see: rarefyAssay)  
 
 Useful functions: nrow, ncol, dim, summary, table, quantile, unique, addPerCellQC, mergeFeaturesByRank
 
