--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -2139,3 +2139,25 @@ year = {2014}
     url = {https://doi.org/10.1038/s41587-023-01872-y},
     year = {2023}
 }
+
+@article{Schloss2024rarefaction1,
+    author = {Patrick D. Schloss},
+    title = {Rarefaction is currently the best approach to control for uneven sequencing     effort in amplicon sequence analyses},
+    journal = {mSphere},
+    volume = {9},
+    number = {2},
+    pages = {e00354-23},
+    url = {https://journals.asm.org/doi/abs/10.1128/msphere.00354-23}
+    year = {2024}
+}
+
+@article{Schloss2024rarefaction2,
+    author = {Patrick D. Schloss},
+    title = {Waste not, want not: revisiting the analysis that called into question the practice of rarefaction},
+    journal = {mSphere},
+    volume = {9},
+    number = {1},
+    pages = {e00355-23},
+    url = {https://journals.asm.org/doi/abs/10.1128/msphere.00355-23}
+    year = {2024}
+}
