--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -302,8 +302,9 @@ plotColData(tse,"sum","SampleType", colour_by = "SampleType") +
 
 In addition, data can be rarefied with
 [rarefyAssay](https://microbiome.github.io/mia/reference/rarefyAssay.html),
-which normalises the samples to an equal number of reads. However,
-this practice has been discouraged for the analysis of differentially
+which normalises the samples to an equal number of reads. 
+This remains controversial, however, and strategies to mitigate the information loss in rarefaction have been proposed [@Schloss2024rarefaction1] [@Schloss2024rarefaction2].
+Moreover, this practice has been discouraged for the analysis of differentially
 abundant microorganisms (see [@mcmurdie2014waste]).
 
 ### Contaminant sequences
